<resources>
    <string name="app_name">ShakSpotify</string>
    <string name="LOGIN_PREF">login</string>
    <string name="CHECK_LOGIN">isLogin</string>
    <string name="facebook_app_id">612501631500749</string>
    <string name="fbAppSecret">d7e683b1821675a2b4922fff87ce6bfb</string>
    <string name="fb_login_protocol_scheme">fb612501631500749</string>
    <string name="facebook_client_token">8ef3db46a7c84921b19c37763ab14875</string>
    <string name="RECAPTCHA_SITE_KEY">6LeY5eAqAAAAAAo7G8JD-mLzkEPhZD8KvY14cv0k</string>
    <string name="this_is_the_splash_image">this is the splash image</string>
    <string name="splash_text">ShakSpotify</string>
    <string name="white_logo">white logo</string>
    <string name="ask_login_txt">Millions of songs.\nFree on ShakSpotify.</string>
    <string name="sign_up_txt">Sign up to start\nlistening</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up free</string>
    <string name="google_logo">Google Logo</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone_no">Continue with  Phone No</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="img_description">This is an image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_txt">Log in to\nShakSpotify</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in_underlined"><u>Log in</u></string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="dummy_text">This is Dummy Text</string>
    <string name="thank_you_txt">Thank you,\nSee you soon.</string>
    <string name="next">Next</string>
    <string name="login_without_password">login without password</string>
    <string name="your_password_goes_here">Your password goes here</string>
    <string name="you_ll_need_to_confirm_this_email_later">You\'ll need to confirm this email later</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="we_ll_send_you_a_code">We\'ll send you a code to confirm your phone no</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="we_may_occasionally_send">We may occasionally send you service-based messages.</string>
    <string name="your_phone_no_goes_here">Your phone no goes here…</string>
    <string name="createYourPassword">Create your password</string>
    <string name="confirmYourPassword">Confirm your password</string>
    <string name="what_s_your_date_of_birth">What\'s your date of birth?</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="nonBinary">Non-binary</string>
    <string name="others">Others</string>
    <string name="not_say">Prefer not to say</string>
    <string name="this_appears_on_your_shakspotify_profile">This appears on your ShakSpotify profile</string>
    <string name="by_tapping">By tapping \"Create Account\", you agree to the ShakSpotify Terms of Use.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="learn_more">To learn more about how ShakSpotify collects, uses, shares and protects your personal data, please see the ShakSpotify Privacy Policy.</string>
    <string name="marketingMsgTxt">I would prefer not to receive marketing messages from ShakSpotify.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_data">Share my registration data with ShakSpotify\'s content providers for marketing purpose.</string>
    <string name="create_account">Create account</string>
    <string name="human_txt">We need to make sure that you\'re a human</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="continue_str">Continue</string>
    <string name="what_music_do_you_like">What music do you like?</string>
    <string name="choose_3_or_more_artists_you_like">Choose 3 or more artists you like</string>
    <string name="hindi">Hindi</string>
    <string name="for_you">For You</string>
    <string name="search">Search</string>
    <string name="artist">Artist Name</string>
</resources>