<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryBgColor"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/askLoginWhiteLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/rounded_bg"
            android:contentDescription="@string/white_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_logo" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/askLoginWhiteLogo"
            />

        <LinearLayout
            android:id="@+id/loginWithGmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_green_bg"
            android:gravity="center"
            android:layout_marginTop="140dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:weightSum="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTxt">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_gmail"
                android:layout_weight="3"
                android:contentDescription="@string/img_description" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/continue_with_email"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginWithPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_stroked_bg"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithGmail">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_phone"
                android:layout_weight="3"
                android:contentDescription="@string/img_description" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/continue_with_phone_no"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_stroked_bg"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithPhoneNo">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="3"
                android:src="@drawable/icon_google"
                android:contentDescription="@string/img_description" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/continue_with_google"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_stroked_bg"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithGoogle">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_fb"
                android:layout_weight="3"
                android:contentDescription="@string/img_description" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/continue_with_fb"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/dontHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/text_color"
            android:layout_marginTop="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithFacebook"
            />

        <TextView
            android:id="@+id/goBackToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up_underlined"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dontHaveAcc"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>