<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AskLogin"
    android:background="@drawable/black_green_gradient"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/askLoginWhiteLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/white_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_white" />

        <TextView
            android:id="@+id/askLoginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_login_txt"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/askLoginWhiteLogo"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:background="@drawable/rounded_green_bg"
            android:layout_marginTop="200dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/askLoginTxt"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:background="@drawable/rounded_stroked_bg"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>